--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,10 @@
 name: axios
 description: Simple, zero-configuration command-line http server
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/Sayegh7/axios
+
+executables:
+  axios:
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
