Update install command

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: axios
 description: Simple, zero-configuration command-line http server
-version: 1.0.1
+version: 1.0.1+1
 repository: https://github.com/Sayegh7/axios
 
 executables:
